fix: remove register page scrollbar

--- a/src/app/authenticate/register/register.page.scss
+++ b/src/app/authenticate/register/register.page.scss
@@ -1,6 +1,6 @@
 ion-content {
   .register-page {
-    height: 100vh;
+    height: 100%;
     width: 100vw;
 
     margin: 0 auto;
